<resources>
    <string name="app_name">Platcourse</string>
    <string name="should_login_tweet">يتوجب التسجيل لاظهار رقم صاحب التغريدة</string>
    <string name="login">تسجيل دخول</string>
    <string name="register">تسجيل حساب</string>
    <string name="welcome_again">مرحباً بك مجدداً</string>
    <string name="first_name">الاسم الاول</string>
    <string name="check_first_empty">يجب ادخال الاسم بشكل صحيح</string>
    <string name="last_name">اسم العائلة</string>
    <string name="check_last_empty">يجب ادخال اسم العائلة</string>
    <string name="enter_first_name">ادخل اسم المستخدم</string>
    <string name="enter_last_name">قم بادخال اسم العائلة هنا</string>
    <string name="email">البريد الالكتروني</string>
    <string name="enter_email">ادخل بريدك الالكتروني</string>
    <string name="check_email">يجب ادخال بريد إلكتروني صحيح</string>
    <string name="nationality">الجنسية</string>
    <string name="nationality_id">رقم الهوية الوطنية/هوية مقيم</string>
    <string name="check_nationality">يجب إدخال رقم الهوية</string>
    <string name="enter_national">قم بادخال رقم الهوية الوطنية/هوية مقيم هنا</string>
    <string name="birth_date">تاريخ الميلاد</string>
    <string name="enter_birth">اضغط هنا لتحديد تاريخ الميلاد</string>
    <string name="check_birth_day">يجب تحديد تاريخ الميلاد</string>
    <string name="select_nationality">اضغط هنا لتحديد الجنسية</string>
    <string name="nationality_check">يجب تحديد الجنسية</string>
    <string name="location">العنوان</string>
    <string name="select_address">اضغط لتحديد عنوانك من خلال خراذط جوجل</string>
    <string name="address_check">يجب تحديد العنوان الخاص بك</string>
    <string name="pass_hint_title">قم بتعيين كلمة مرور للحساب</string>
    <string name="enter_pass">ادخل كلمة المرور</string>
    <string name="reenter_pass">اعادة ادخال كلمة المرور</string>
    <string name="check_field_pass">كلمة المرور لا تقل عن ٨ حروف</string>
    <string name="phone">رقم الهاتف </string>
    <string name="password">كلمة المرور</string>
    <string name="forget_password"><u>نسيت كلمة المرور</u></string>
    <string name="reset"><u>Reset</u></string>
    <string name="check_field_empty">تحقق من البيانات المدخلة في هذا الحقل</string>
    <string name="check_field_phone_error">يجب ادخال رقم جوال صحيح مثال 966xxxxxxx</string>
    <string name="user_name">اسم المستخدم</string>
    <string name="re_pass">اعادة كلمة المرور</string>
    <string name="agree_on">اوافق على</string>
    <string name="terms"><u>الخصوصية وشروط الاستخدام</u></string>
    <string name="terms_menu">الشروط و الأحكام</string>
    <string name="and">و</string>
    <string name="sales_policy"><u>سياسة البيع</u></string>
    <string name="sales_policy_menu">سياسة البيع</string>
    <string name="check_match_pass">كلمتي المرور غير متطابقتين</string>
    <string name="welcome_in_platcourse">مرحباً بك في platcourse</string>
    <string name="create_account"><u>انشاء حساب</u></string>
    <string name="enter_phone_hint">قم بادخال رقم الجوال هنا</string>
    <string name="accept_terms">يجب الموافقة على الشروط و سياسة البيع الخاصة بالتطبيق</string>
    <string name="privacy_terms">الخصوصية وشروط الاستخدام</string>
    <string name="sales_policy_title">سياسة البيع</string>
    <string name="login_hint">قم بتسجيل دخول لحسابك المسجل</string>
    <string name="tweets">تغريدات</string>
    <string name="favourite">المفضلة</string>
    <string name="tweet">غرد</string>
    <string name="notifications">اشعارات</string>
    <string name="messages">رسائل</string>
    <string name="profile">ملفي الشخصي</string>
    <string name="change_password">تغيير كلمة المرور</string>
    <string name="packages">الباقات</string>
    <string name="contact_us">التواصل/الدعم الفني</string>
    <string name="commission">العمولة</string>
    <string name="about_us">من نحن</string>
    <string name="login_register">تسجيل دخول / حساب</string>
    <string name="welcom">مرحباً بك</string>
    <string name="recovery_password">استعادة كلمة المرور</string>
    <string name="add_email_hint"> سيتم ارسال كود التحقق إلى البريد الإلكتروني الخاص بك اذا لم تجده تأكد من فحص الjunk او الspam </string>
    <string name="complete">استكمال</string>
    <string name="verify">قم بتوثيق بريدك الالكتروني</string>
    <string name="email_verify_hint">قم بادخال كود التحقق المرسل الي بريدك الالكتروني المسجل من خلالك</string>
    <string name="not_receive_code">لم يصلك كود التحقق</string>
    <string name="resend"><u>اعادة ارسال</u></string>
    <string name="resend_timer">اعادة ارسال (%1$s ثانية)</string>
    <string name="reset_password">تعيين كلمة المرور</string>
    <string name="add_new_password">قم باضافة كلمة مرور جديد لحسابك</string>
    <string name="check_confirm_pass">يجب أن تتطابق كلمة المرور</string>
    <string name="success_code">كود التحقق الخاص بك لإعادة تعيين كلمة المرور هي %1$s</string>
    <string name="invalid_code">كود التحقيق غير صحيح</string>
    <string name="enter_password_hint">قم بإدخال كلمة المرور الجديدة</string>
    <string name="confirm_password_hint">إعادة إدخال كلمة المرور الجديدة</string>
    <string name="reset_password_succssfully">تم تعيين كلمة المرور بنجاح</string>
    <string name="comission_title">بيع منتجك بعمولة 1% فقط في تغاريد الاعلانية</string>
    <string name="pledge">العمولة أمانة في ذمة المعلن سواء تمت المبايعة عن طريق الموقع أو بسببه</string>
    <string name="pledge_measures">يعد إرسال المبلغ،يجب مراسلتنا عبر النموذج التالي لأجل تسجيل العمولة بأسم عضويتك ثم الحصول على مميزات الموقع الخاصة بالعملاء</string>
    <string name="iban_num">رقم الايبان</string>
    <string name="transform">تحويل</string>
    <string name="add_trans_info">اضف معلومات الحوالة</string>
    <string name="check_amount">يجب إدخال قيمة مبلغ العمولة</string>
    <string name="amount_commission">مبلغ العمولة*</string>
    <string name="transformed_bank">البنك الذي تم التحويل اليه*</string>
    <string name="trans_hint">أسم المحول*</string>
    <string name="check_trans_name">يجب إدخال اسم المحول</string>
    <string name="ad_title">اسم الاعلان</string>
    <string name="ad_num">رقم الاعلان</string>
    <string name="time_trans">متي تم التحويل</string>
    <string name="notes">ملاحظات</string>
    <string name="transform_img">صورة ايصال التحويل</string>
    <string name="send">ارسال</string>
    <string name="press_upload">اضغط للرفع</string>
    <string name="trans_success">تم التحويل بنجاح</string>
    <string name="price_space">السعر /</string>
    <string name="near_me">بالقرب مني</string>
    <string name="all_regions">كل المـنـاطـق</string>
    <string name="all_cities">كل المدن</string>
    <string name="empty_screen">الشاشة فارغة</string>
    <string name="try_another_pages">حاول تصفح صفحات اخري في التطبيق</string>
    <string name="all_categories">كل الاقسام</string>
    <string name="copied">تم النسخ</string>
    <string name="sar">ر.س</string>
    <string name="select_region">قم بتحديد المنطقة</string>
    <string name="search_city">ابحث باسم المدينة</string>
    <string name="save">حفظ</string>
    <string name="search_region_name">ابحث بإسم المنطقة</string>
    <string name="select_city">قم بتحديد المدينة</string>
    <string name="show_tweets_followers">عرض تغريدات من اتابعهم فقط</string>
    <string name="special_ad">اعلان مميز</string>
    <string name="search_hint">ابحث باسم الكورس او المدرس</string>
    <string name="search_results">نتائج البحث</string>
    <string name="search_result_count">وجدنا %1$s نتيجة بحث مطابقة لكلمة ( %2$s )</string>
    <string name="show_all">عرض جميع التغريدات</string>
    <string name="tweet_with_desc">غرد بتفاصيل اعلانك</string>
    <string name="add_ad_images">اضف صور الاعلان</string>
    <string name="add_max_ten">يمكنك اضافة حتي ١٠ صور</string>
    <string name="do_you_need_price">هل ترغب بتحديد السعر ؟</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="price">السعر</string>
    <string name="select_cat">اختر القسم</string>
    <string name="press_select_cat">اضغط لتحديد قسم</string>
    <string name="check_cat_empty">يرجى تحديد القسم المصنف به هذا الاعلان</string>
    <string name="check_location_empty">يرجى تحديد الموقع الخاص بهذا الاعلان</string>
    <string name="write_whats_num">اكتب رقم واتساب للتواصل ( اختياري )</string>
    <string name="contact_phone_hint">في حالة عدم الاضافة ستكون المراسلة عبر الرسائل الخاصة والردود</string>
    <string name="detect_location">حدد الموقع</string>
    <string name="press_select_location">اضغط لتحديد الموقع</string>
    <string name="complete_btn">استكمل التغريدة</string>
    <string name="you_have_selected">اخترت %1$s</string>
    <string name="back">العودة</string>
    <string name="select_main_cat">قم بتحديد القسم الرئيسي</string>
    <string name="search_cat_name">ابحث بإسم القسم</string>
    <string name="detect_sub_cat">قم بتحديد القسم الفرعي</string>
    <string name="tweet_with_ad">غرد بالاعلان</string>
    <string name="detect_cat">حدد القسم</string>
    <string name="max_imgs">يمكنك اضافة حتى ١٠ صور فقط</string>
    <string name="follow">متابعة</string>
    <string name="select_method">اختر طريقة النشر</string>
    <string name="free_tweet">نشر التغريدة الاعلانية مجاناً</string>
    <string name="extra_tweet">نشر تغريدة مميزة من الباقة ( متبقي %1$s تغريدة )</string>
    <string name="more_appear">عايز التغريدة الإعلانية تظهر أكثر؟</string>
    <string name="select_special">اختار واحدة من خدماتنا المميزة!</string>
    <string name="top_class">إعلانك هيفضل ضمن اول الإعلانات في الفئة"</string>
    <string name="package_for_ad">باقة اعلانية لـ(3) إعلانات مجاناً</string>
    <string name="old_new_price">السعر  %1$s ر.س بدلاً من  %2$s</string>
    <string name="pledge_formula">* اتعهد واقسم بالله انا المعلن ان ادفع عمولة الموقع وهي ١٪ من قيمة البيع سواء تم البيع عن طريق الموقع او بسببه. *كما اتعقد بدفع العمولة خلال 10 أيام من استلام مبلغ المبايعة.</string>
    <string name="publish">نشر</string>
    <string name="publish_free">انشر التغردية الإعلانية مجاناً</string>
    <string name="pay_featured_ad">ادفع لنشر تغريدك بشكلها المميز</string>
    <string name="select_payment_methods">اختر طريقة الدفع التي تناسبك</string>
    <string name="add_and_review">تم اضافة التغريدة الاعلانية و قيد المراجعة</string>
    <string name="hash_tag">هاشتاج</string>
    <string name="write_comment">اضف تقييمك</string>
    <string name="sold">تم البيع</string>
    <string name="pause">تعطيل</string>
    <string name="pending">قيد الموافقة</string>
    <string name="tweet_details">تغريدة</string>
    <string name="now">الآن</string>
    <string name="status_update">تم تحديث حالة التويتة بنجاح</string>
    <string name="status_update_deactive">تم تعطيل التويتة بنجاح</string>
    <string name="retweet">اعادة تغريد</string>
    <string name="republish">اعادة نشر</string>
    <string name="unpublish">إلغاء النشر</string>
    <string name="fav_tweets">تغريدات المفضلة</string>
    <string name="select_reason">حدد سبب البلاغ</string>
    <string name="report_reason">أخبرنا لماذا تريد الإبلاغ عن هذا الإعلان </string>
    <string name="thanks_report">نشكرك لإبلاغك عن هذا الإعلان</string>
    <string name="add_mail_details">الرجاء تزويدنا بالمزيد من التفاصيل التي قد تساعدنا عند التحقق من البلاغ المقدّم. إذا أردت معرفة نتيجة التحقق، الرجاء إضافة إيميلك</string>
    <string name="error_validation">يجب أن لا يقل الوصف عن  خمسة حروف</string>
    <string name="report_ad">الابلاغ عن اعلان</string>
    <string name="current_package">باقتك الحالية</string>
    <string name="number_ads">عدد الاعلانات داخل الباقة</string>
    <string name="consumed">تم استهلاك</string>
    <string name="rest">المتبقي من الباقة</string>
    <string name="payment_method">طريقة الدفع</string>
    <string name="payment_value">قيمة الباقة</string>
    <string name="payment_status"> حالة الباقة : </string>
    <string name="package_run">الباقة سارية</string>
    <string name="package_pending">" في انتظار الموافق"</string>
    <string name="package_completed">انتهت</string>
</resources>