<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".auth.splash.SplashActivity"
    android:background="@drawable/grad_background"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="0dp">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/splash_logo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/margin_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvTitle"
        />
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_again"
        app:layout_constraintStart_toStartOf="@id/registerBtn"
        app:layout_constraintEnd_toEndOf="@id/registerBtn"
        android:layout_marginBottom="@dimen/margin_small"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/tvBody"
        android:fontFamily="@font/medium"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/tvBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/should_login_tweet"
        app:layout_constraintBottom_toTopOf="@+id/registerBtn"
        app:layout_constraintStart_toStartOf="@id/registerBtn"
        app:layout_constraintEnd_toEndOf="@id/registerBtn"
        android:layout_marginBottom="27dp"
        android:textColor="@color/white"
        android:fontFamily="@font/light"
        android:textSize="15.5sp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="44dp"
        app:backgroundTint="@null"
        android:background="@drawable/solid_button_white"
        android:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@id/loginBtn"
        android:text="@string/register"
        android:textColor="@color/dark"
        android:fontFamily="@font/medium"
        android:layout_marginBottom="9dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:backgroundTint="@null"
        android:minHeight="44dp"
        android:background="@drawable/stroke_button_white"
        android:backgroundTint="@null"
        android:text="@string/login"
        android:fontFamily="@font/medium"
        android:layout_marginBottom="42dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>