<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:textStyle="normal"
            android:layout_marginTop="23dp"
            android:textSize="14.5sp"
            android:layout_gravity="center"
            android:textColor="@color/dark"
            android:lineSpacingExtra="5.5sp"
            android:text="@string/select_method"/>
        <LinearLayout
            android:id="@+id/freePackageLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/stroke_bg_white_7"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="19dp"
            android:layout_marginTop="19dp"
            android:minHeight="45dp"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/medium"
                android:textStyle="normal"
                android:textSize="13sp"
                android:layout_marginStart="@dimen/margin_large"
                android:textColor="@color/dark"
                android:lineSpacingExtra="6sp"
                android:text="@string/free_tweet"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/currentPackageLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/stroke_bg_white_7"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="19dp"
            android:layout_marginTop="@dimen/margin_normal"
            android:minHeight="45dp"
            android:gravity="center_vertical"
            >
            <TextView
                android:id="@+id/tvTweetNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/medium"
                android:textStyle="normal"
                android:textSize="13sp"
                android:layout_marginStart="@dimen/margin_large"
                android:textColor="@color/dark"
                android:lineSpacingExtra="6sp"
                android:text="@string/extra_tweet"/>
        </LinearLayout>

        <View
            android:id="@+id/topView"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="13.5dp"
            android:background="#30000000"
            />
    <LinearLayout
        android:id="@+id/packagesRecLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/star_package"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18.5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:textStyle="normal"
            android:textSize="14.5sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10.5dp"
            android:textColor="@color/dark"
            android:lineSpacingExtra="5.5sp"
            android:gravity="center_horizontal"
            android:text="@string/more_appear"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:textStyle="normal"
            android:textSize="14.5sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10.5dp"
            android:textColor="@color/dark"
            android:lineSpacingExtra="5.5sp"
            android:gravity="center_horizontal"
            android:text="@string/select_special"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:textStyle="normal"
            android:textSize="12.5sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10.5dp"
            android:textColor="@color/water_blue"
            android:lineSpacingExtra="5.5sp"
            android:gravity="center_horizontal"
            android:text="@string/top_class"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBanks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_package"
            tools:itemCount="2"
            />
    </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="13.5dp"
            android:background="#30000000"
            />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bsmla"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        android:layout_marginTop="15dp"
        />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="19dp"
            android:layout_marginStart="19dp"
        >
        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cbTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/custom_checkbox_region"
            android:checked="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="15.5dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/medium"
            android:textStyle="normal"
            android:textSize="12.3sp"
            android:textColor="@color/dark"
            android:lineSpacingExtra="5.8sp"

            android:layout_marginBottom="@dimen/margin_large"
            android:text="@string/pledge_formula"
            />
    </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="13.5dp"
            android:background="#30000000"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
        <TextView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="140dp"
            app:layout_constraintBottom_toBottomOf="@id/saveBtn"
            android:textColor="@color/dark"
            android:gravity="center"
            android:paddingTop="@dimen/margin_normal"
            android:paddingBottom="@dimen/margin_normal"
            app:layout_constraintTop_toTopOf="@id/saveBtn"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/back"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="@null"
            app:backgroundTint="@null"
            android:textColor="@color/very_grey_color_text"
            android:enabled="false"
            android:text="@string/follow"
            app:layout_constraintStart_toEndOf="@id/backBtn"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/margin_large"
            android:background="@drawable/disable_background_btn"
            />
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>