<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="92dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/grad_background_toolbar_round"

    >
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/commission"
        android:fontFamily="@font/regular"
        android:textStyle="normal"
        android:layout_marginStart="18dp"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/ivBack"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_right"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margin_large"
        android:tint="@color/white"
        android:rotation="180"
        />

    <TextView
        android:id="@+id/tvSold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/sold"
        android:background="@drawable/stroke_bg_white"
        android:padding="@dimen/margin_small"
        android:fontFamily="@font/regular"
        android:textStyle="normal"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="14dp"
        android:textSize="14sp"
        android:minWidth="74dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/tvPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/pause"
        android:padding="@dimen/margin_small"
        android:fontFamily="@font/regular"
        android:textStyle="normal"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="14dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/tvSold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/tvPending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/pending"
        android:padding="@dimen/margin_small"
        android:fontFamily="@font/regular"
        android:textStyle="normal"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="14dp"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/tvSold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <androidx.constraintlayout.widget.Group
        android:id="@+id/tweetStuffGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="tvSold,tvPause"
        />

</androidx.constraintlayout.widget.ConstraintLayout>