<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_close"
            />
        <TextView
            android:id="@+id/tvRegion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:textStyle="normal"
            android:textSize="14.5sp"
            android:textColor="@color/dark"
            android:lineSpacingExtra="5.5sp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            android:text="@string/select_region"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRegion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="44dp"
            android:background="@drawable/bg_bank_account"
            app:layout_constraintTop_toBottomOf="@id/tvRegion"
            android:layout_marginTop="15dp"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:fontFamily="@font/regular"
            android:textStyle="normal"
            android:textSize="14sp"
            android:textColorHint="@color/dark"
            android:textColor="@color/dark"
            android:gravity="center"
            android:hint="@string/search_city"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRegions"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/etRegion"
            android:layout_marginTop="15dp"
            app:layout_constraintVertical_bias="0"
            tools:listitem="@layout/item_region_single"
            android:layout_marginBottom="@dimen/margin_small"
            app:layout_constraintBottom_toTopOf="@id/sep"
            />
        <View
            android:id="@+id/sep"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#e4e4e4"
            app:layout_constraintBottom_toTopOf="@id/saveBtn"
            android:layout_marginBottom="@dimen/margin_large"
            />
        <TextView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="140dp"
            app:layout_constraintBottom_toBottomOf="@id/saveBtn"
            android:textColor="@color/dark"
            android:gravity="center"
            android:paddingTop="@dimen/margin_normal"
            android:paddingBottom="@dimen/margin_normal"
            app:layout_constraintTop_toTopOf="@id/saveBtn"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone"
            android:text="@string/back"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="@null"
            app:backgroundTint="@null"
            android:textColor="@color/very_grey_color_text"
            android:enabled="false"
            android:text="@string/save"
            app:layout_constraintStart_toEndOf="@id/backBtn"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/margin_large"
            android:background="@drawable/disable_background_btn"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>